Add list updated usecase
Does not yet implement repo or graph layers.

Also:

- Adds `develop:store` script to base package for convenience.

- Renames Updated to Updatable to distinguish the implementable
interface from the type including all implementations.

- Increases min string length of category fields to 2 to match
name field and fields in Risk model.

- Update Risk model to implement Updatable interface. Risk model is
incomplete but implementing this helps test the Updatable interface.

- Refactors usecase Category type aliasing to use string unions. I want
  to avoid outer layers, e.g. API, from needing to point directly to the
  domain. My first attempt was to alias enums in the usecase layer but I
  wasn't able to get that working in a useful way that worked with Jest
  (problem was likely with Babel). I also wanted to keep enums in the
  domain layer, as class-validator can provide validation on them. That
  left mapping the domain type to usecase type, rather than aliasing
  them. And there seemed no benefit to using enums over string unions in
  the usecase layer.

- Refactors usecase RiskMapper and CategoryMapper to use factory +
  interface pattern instead of an exported class.

- Makes aliasing in the usecase layer consistent, with usecase entities
  having no suffix and domain entities having the suffix "Domain".
  Previously in some places, domain entities had no suffix/prefix and
  usecase entities had a "Usecase" prefix. The idea is that an alias and
  suffix is only needed for entities from other layers.

- Applies the above rules to the graph layer, removing 'Graph' suffixes
  and prefixes.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build:matt-fyi": "start-server-and-test 'yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
     "develop:matt-fyi": "start-server-and-test 'yarn workspace store develop' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
+    "develop:store": "yarn workspace store develop",
     "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "lint:types": "tsc",
     "lint": "yarn lint:types && yarn lint:eslint",
