--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -91,7 +91,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.16.1'
-          cache: 'yarn'
+          # cache: 'yarn'
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --non-interactive --silent
