--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prepare": "husky install",
     "storybook:build": "build-storybook",
     "storybook:start": "start-storybook -p 6006",
-    "test:unit": "jest",
+    "test:unit": "jest --no-cache",
     "test:visreg": "build-storybook --quiet && loki --requireReference --reactUri file:./storybook-static",
     "test:visreg-update": "build-storybook --quiet && loki update --requireReference --reactUri file:./storybook-static"
   },
