--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@graphql-codegen/typescript": "1.23.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@storybook/builder-webpack5": "6.4.13",
+    "@storybook/manager-webpack5": "6.4.13",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
@@ -58,6 +60,7 @@
     "babel-plugin-html-attributes-to-jsx": "^1.6.22",
     "babel-plugin-pluck-imports": "^0.0.1",
     "babel-plugin-remove-export-keywords": "^1.6.22",
+    "babel-plugin-remove-graphql-queries": "4.5.2",
     "class-validator": "0.13.1",
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "cross-env": "7.0.3",
