Make test risk data appear after category data
Gives test risk data older updated dates than category data so they
appear after in the updated list on the home page. Adds updated property
to create risk input type to facilitate this.

Renames DateTime scalar to Date as that's the name used in TypeScript.

Implements serialize and parse methods in the resolvers for Date scalar.

Updates code generators to map Date scalar to TypeScript Date type.

--- a/lib/life/graphql.yml
+++ b/lib/life/graphql.yml
@@ -9,3 +9,5 @@ generates:
       - 'typescript-resolvers'
     config:
       noSchemaStitching: true
+      scalars:
+        Date: 'lib/life/src/type/scalars#DateScalar'
