--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
-    "@babel/eslint-parser": "^7.15.0",
+    "@babel/eslint-parser": "7.16.5",
     "@babel/plugin-proposal-decorators": "7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
     "@babel/preset-env": "7.14.7",
@@ -51,8 +51,8 @@
     "@types/react-dom": "17.0.7",
     "@types/react": "17.0.11",
     "@types/styled-components": "5.1.18",
-    "@typescript-eslint/eslint-plugin": "4.27.0",
-    "@typescript-eslint/parser": "4.27.0",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
     "apollo-server": "3.0.2",
     "apollo": "^2.33.4",
     "babel-jest": "27.0.5",
@@ -65,13 +65,13 @@
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "cross-env": "7.0.3",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint": "7.28.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "25.7.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint": "8.7.0",
     "graphql-scalars": "1.10.0",
     "graphql": "15.5.1",
     "grommet": "2.20.0",
@@ -79,11 +79,11 @@
     "husky": "6.0.0",
     "i18next": "21.6.0",
     "jest-mock-extended": "2.0.4",
-    "jest-transform-graphql": "^2.1.0",
-    "jest": "27.0.5",
+    "jest-transform-graphql": "2.1.0",
+    "jest": "27.4.7",
     "lint-staged": "11.0.0",
     "loki": "0.28.1",
-    "prettier": "2.3.1",
+    "prettier": "2.5.1",
     "react-dom": "17.0.1",
     "react-i18next": "11.15.0",
     "react-test-renderer": "17.0.1",
@@ -91,7 +91,7 @@
     "start-server-and-test": "1.12.6",
     "styled-components": "5.3.3",
     "tsconfig-paths-webpack-plugin": "3.5.1",
-    "typescript": "4.3.2",
+    "typescript": "4.5.5",
     "webpack-cli": "4.7.2",
     "webpack-merge": "5.8.0",
     "webpack-node-externals": "3.0.0",
