--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -12,15 +12,17 @@
     "build": "gatsby build",
     "clean": "gatsby clean && rimraf matt-fyi/src/__generated__",
     "develop": "yarn clean && gatsby develop",
+    "lint:eslint": "eslint 'src/**/*.{js,ts,tsx}' --max-warnings 0 --fix",
+    "lint:types": "tsc",
     "serve": "gatsby serve"
   },
   "devDependencies": {
     "babel-preset-gatsby": "1.8.0",
     "eslint-plugin-graphql": "4.0.0",
+    "gatsby": "3.13.1",
     "gatsby-plugin-layout": "2.14.0",
     "gatsby-plugin-mdx": "2.13.0",
     "gatsby-plugin-typegen": "2.2.4",
-    "gatsby": "3.13.1",
     "life": "0.0.1",
     "rimraf": "3.0.2",
     "source-map-support": "0.5.19",
