--- a/lib/component/package.json
+++ b/lib/component/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "life",
+  "name": "component",
   "version": "0.0.1",
   "private": true,
-  "description": "Business rules",
+  "description": "UI component library",
   "author": {
     "name": "Matt Schultz",
     "email": "hey@matt.fyi",
     "url": "https://www.matt.fyi"
   },
   "scripts": {
-    "codegen": "yarn graphql-codegen --config graphql.yml",
-    "codegen:watch": "yarn graphql-codegen --config graphql.yml --watch",
     "lint:eslint": "eslint 'src/**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "lint:types": "tsc"
-  },
-  "devDependencies": {
-    "@types/jest": "26.0.23",
-    "util": "0.0.1"
   }
 }
