--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "private": true,
   "workspaces": [
-    "lib/life",
-    "lib/util",
     "app/content",
+    "app/matt-fyi",
     "app/store",
-    "app/matt-fyi"
+    "lib/component",
+    "lib/helper",
+    "lib/life"
   ],
   "scripts": {
     "build:matt-fyi": "start-server-and-test 'yarn workspace store build && yarn workspace store start' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
     "develop:matt-fyi": "start-server-and-test 'yarn workspace store develop' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
     "develop:store": "yarn workspace store develop",
-    "lint:eslint": "eslint '**/*.{js,ts,tsx}' --max-warnings 0 --fix",
-    "lint:types": "tsc",
     "lint": "yarn lint:types && yarn lint:eslint",
+    "lint:eslint": "yarn workspaces run lint:eslint",
+    "lint:types": "yarn workspaces run lint:types",
     "prepare": "husky install",
     "storybook:build": "build-storybook",
     "storybook:start": "start-storybook -p 6006",
@@ -24,6 +25,7 @@
   "resolutions": {
     "graphql": "15.5.1"
   },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.14.6",
     "@babel/eslint-parser": "7.16.5",
@@ -34,27 +36,27 @@
     "@babel/preset-typescript": "7.14.5",
     "@graphql-codegen/cli": "1.21.7",
     "@graphql-codegen/introspection": "1.18.2",
+    "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-document-nodes": "1.17.16",
     "@graphql-codegen/typescript-resolvers": "1.20.0",
-    "@graphql-codegen/typescript": "1.23.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@storybook/builder-webpack5": "6.4.13",
-    "@storybook/manager-webpack5": "6.4.13",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/builder-webpack5": "6.4.13",
+    "@storybook/manager-webpack5": "6.4.13",
     "@storybook/react": "^6.4.9",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "26.0.23",
     "@types/mdx-js__react": "^1.5.4",
-    "@types/react-dom": "17.0.7",
     "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.7",
     "@types/styled-components": "5.1.18",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
-    "apollo-server": "3.0.2",
     "apollo": "^2.33.4",
+    "apollo-server": "3.0.2",
     "babel-jest": "27.0.5",
     "babel-loader": "^8.2.3",
     "babel-plugin-html-attributes-to-jsx": "^1.6.22",
@@ -64,6 +66,7 @@
     "class-validator": "0.13.1",
     "clean-webpack-plugin": "4.0.0-alpha.0",
     "cross-env": "7.0.3",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.25.4",
@@ -71,33 +74,31 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
-    "eslint": "8.7.0",
-    "graphql-scalars": "1.10.0",
     "graphql": "15.5.1",
+    "graphql-scalars": "1.10.0",
     "grommet": "2.20.0",
     "grommet-icons": "4.7.0",
     "husky": "6.0.0",
     "i18next": "21.6.0",
+    "jest": "27.4.7",
     "jest-mock-extended": "2.0.4",
     "jest-transform-graphql": "2.1.0",
-    "jest": "27.4.7",
     "lint-staged": "11.0.0",
     "loki": "0.28.1",
     "prettier": "2.5.1",
+    "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "11.15.0",
     "react-test-renderer": "17.0.1",
-    "react": "17.0.1",
     "start-server-and-test": "1.12.6",
     "styled-components": "5.3.3",
     "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "4.5.5",
+    "webpack": "5.42.0",
     "webpack-cli": "4.7.2",
     "webpack-merge": "5.8.0",
-    "webpack-node-externals": "3.0.0",
-    "webpack": "5.42.0"
+    "webpack-node-externals": "3.0.0"
   },
-  "dependencies": {},
   "loki": {
     "configurations": {
       "chrome.laptop": {
