Remove util dependency from life workspace
This was a leftover to how we initially imported other workspaces. Now
we use aliases, e.g. via Typescript.

--- a/lib/life/package.json
+++ b/lib/life/package.json
@@ -15,7 +15,6 @@
     "lint:types": "tsc"
   },
   "devDependencies": {
-    "@types/jest": "26.0.23",
-    "util": "0.0.1"
+    "@types/jest": "26.0.23"
   }
 }
