--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -5,7 +5,6 @@
     // be explicit about types included to avoid clashing with Jest types
     "types": ["cypress"]
   },
-  "include": ["./integration/**/*.ts"],
-  // "include": ["../node_modules/cypress", "**/*.ts"],
+  "include": ["./**/*.ts"],
   "exclude": []
 }
