Add end-to-end yarn scripts for Cypress
Not yet part of CI pipeline.

Deletes example test files created during the Cypress install.

--- a/app/matt-fyi/package.json
+++ b/app/matt-fyi/package.json
@@ -14,7 +14,7 @@
     "develop": "yarn clean && gatsby develop",
     "lint:eslint": "eslint 'src/**/*.{js,ts,tsx}' --max-warnings 0 --fix",
     "lint:types": "tsc",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve -p 8000"
   },
   "devDependencies": {
     "babel-preset-gatsby": "1.8.0",
