--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -287,6 +287,17 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           RUN_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
+  end-to-end:
+    name: 'End-to-end tests'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v2.11.7
+        with:
+          build: yarn test:e2e
+
   build:
     name: 'Build'
     runs-on: ubuntu-latest
@@ -399,7 +410,7 @@ jobs:
   deploy-prepare:
     name: 'Prepare deploying to Netlify'
     runs-on: ubuntu-latest
-    needs: [static-unit, visual-reg, build]
+    needs: [static-unit, visual-reg, end-to-end, build]
     outputs:
       workflow-start-time: ${{ needs.static-unit.outputs.start-time }}
       start-time: ${{ steps.start-time.outputs.result }}
