Change E2E Github from `build` to `command`
Using `build` may have been resulting in the Cypress action starting
Cypress after that step is complete, causing the error.

--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -296,7 +296,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2.11.7
         with:
-          build: yarn test:e2e
+          command: yarn test:e2e
 
   build:
     name: 'Build'
