--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "cypress"
   ],
   "scripts": {
-    "build:matt-fyi": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../cypress/fixtures/store.json\"' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
-    "develop:matt-fyi": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev  --seed \"../../cypress/fixtures/store.json\"' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
-    "develop:store": "yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../cypress/fixtures/store.json\"",
+    "build:matt-fyi": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
+    "develop:matt-fyi": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev  --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
+    "develop:store": "yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"",
     "lint": "yarn lint:types && yarn lint:eslint",
     "lint:eslint": "yarn workspaces run lint:eslint",
     "lint:types": "yarn workspaces run lint:types",
@@ -20,8 +20,8 @@
     "storybook:build": "build-storybook",
     "storybook:start": "start-storybook -p 6006",
     "test:unit": "jest",
-    "test:e2e": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../cypress/fixtures/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi build && yarn workspace matt-fyi serve' 8000 'cypress run'",
-    "test:e2e:dev": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../cypress/fixtures/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi develop' 8000 'cypress open'",
+    "test:e2e": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi build && yarn workspace matt-fyi serve' 8000 'cypress run'",
+    "test:e2e:dev": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi develop' 8000 'cypress open'",
     "test:visreg": "build-storybook --quiet && loki --requireReference --reactUri file:./storybook-static",
     "test:visreg-update": "build-storybook --quiet && loki update --requireReference --reactUri file:./storybook-static"
   },
