Add categories with diagrams to index
Make markup more semantic on index.

Adds BaseProps with `id` and `testId` props to all components in lib.
Makes `testId` required on control components.

Adds `as` property to Text and Box components.

Removes margin for Text components when rendered as a heading of any
level.

Adds custom Cypress command `getTestId`.

Sets timezone to UTC in Cypress yarn commands so dates in tests are
consistent wherever run.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "storybook:build": "build-storybook",
     "storybook:start": "start-storybook -p 6006",
     "test:unit": "jest",
-    "test:e2e": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi build && yarn workspace matt-fyi serve' 8000 'cypress run'",
-    "test:e2e:dev": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi develop' 8000 'cypress open'",
+    "test:e2e": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi build && yarn workspace matt-fyi serve' 8000 'TZ=UTC cypress run'",
+    "test:e2e:dev": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi develop' 8000 'TZ=UTC cypress open'",
     "test:visreg": "build-storybook --quiet && loki --requireReference --reactUri file:./storybook-static",
     "test:visreg:update": "build-storybook --quiet && loki update --requireReference --reactUri file:./storybook-static"
   },
