--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   ],
   "scripts": {
     "build:matt-fyi": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi build'",
+    "cypress:open": "TZ=UTC cypress open",
+    "cypress:run": "TZ=UTC cypress run",
     "develop:matt-fyi": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev  --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace content build && yarn workspace content start && yarn workspace matt-fyi develop'",
     "develop:store": "yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"",
     "lint": "yarn lint:types && yarn lint:eslint",
@@ -21,8 +23,8 @@
     "storybook:build": "build-storybook",
     "storybook:start": "start-storybook -p 6006",
     "test:unit": "jest",
-    "test:e2e": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi build && yarn workspace matt-fyi serve' 8000 'TZ=UTC cypress run'",
-    "test:e2e:dev": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi develop' 8000 'TZ=UTC cypress open'",
+    "test:e2e": "start-server-and-test 'yarn workspace store build && yarn workspace store start --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi build && yarn workspace matt-fyi serve' 8000 'yarn cypress:run'",
+    "test:e2e:dev": "start-server-and-test 'yarn workspace store build:dev && yarn workspace store start:dev --seed \"../../data/store.json\"' http-get://localhost:4000 'yarn workspace matt-fyi develop' 8000 'yarn cypress:run'",
     "test:visreg": "build-storybook --quiet && loki --requireReference --reactUri file:./storybook-static",
     "test:visreg:update": "build-storybook --quiet && loki update --requireReference --reactUri file:./storybook-static"
   },
