--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "husky": "6.0.0",
     "i18next": "21.6.0",
     "jest": "27.4.7",
+    "jest-diff": "27.5.1",
     "jest-mock-extended": "2.0.4",
     "jest-transform-graphql": "2.1.0",
     "jsonfile": "^6.1.0",
@@ -109,7 +110,8 @@
     "webpack-cli": "4.7.2",
     "webpack-merge": "5.8.0",
     "webpack-node-externals": "3.0.0",
-    "yargs": "17.3.1"
+    "yargs": "17.3.1",
+    "zod": "3.11.6"
   },
   "loki": {
     "configurations": {
