Add package.json webpack resolution to 5.42.0
Fixes a webpack build error introduced in a previous commit after adding
Yarn package gatsby-plugin-netlify: "The 'compilation' argument must be
an instance of Compilation".

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:visreg:update": "build-storybook --quiet && loki update --requireReference --reactUri file:./storybook-static"
   },
   "resolutions": {
-    "graphql": "15.5.1"
+    "graphql": "15.5.1",
+    "webpack": "5.42.0"
   },
   "dependencies": {},
   "devDependencies": {
